Change font and correct vertical align

--- a/src/styles/appFont.scss
+++ b/src/styles/appFont.scss
@@ -1,4 +1,4 @@
 @font-face {
-    font-family: 'Playfair';
-    src: url('./fonts/PlayfairDisplay-Regular.ttf') format('truetype');
+    font-family: 'LibreBaskerville';
+    src: url('./fonts/LibreBaskerville-Regular.ttf') format('truetype');
 }
